# McpProxyForWsl

./: .gitignore  README.md  index.html  package-lock.json  package.json
WslMcpStdioBridge/: README.md  bridge.py  requirements.txt  test_bridge_smoke.py
scripts/: build.ps1
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
