[package]
name = "mcpproxy"
version = "0.1.0"
description = "Forward JetBrains Rider MCP endpoints from Windows to WSL"
authors = ["McpProxy"]
edition = "2021"

[[bin]]
name = "mcpproxy"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
bytes = "1.11.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
url = "2.5.7"
